fix edit layer bugs on sea level and deposits. performance on river

--- a/doc/thesis.tex
+++ b/doc/thesis.tex
@@ -105,7 +105,7 @@ A model is a physical or conceptual object used to represent something else in a
 There are many approaches to achieving rapid computer modeling. The one that is perhaps most focused on, is sketch based modeling. Sket
 
 \section{Geologic Modeling}
-Geologists use models for understanding and communicating about phenomena relating to the structure of the earth and how it changes over time. These structures exhibit certain patterns which distinguishes each of them, and this can be exploited in a modeling system to ease the 
+Geologists use models for understanding and communicating about phenomena relating to the structure of the earth and how it changes over time. Many tools exist for modeling such phenomena based on parameters gathered 
 - models subsurface of the earth.\\
 - show examples\\(clay, wood, sand, 2d skethces and drawings, 3d computer models)
 
