--- a/doc/thesis.bib
+++ b/doc/thesis.bib
@@ -37,3 +37,21 @@ year = {2008},
   year={2001},
   publisher={Morgan Kaufmann}
 }
+
+@inproceedings{shepard1968two,
+  title={A two-dimensional interpolation function for irregularly-spaced data},
+  author={Shepard, D.},
+  booktitle={Proceedings of the 1968 23rd ACM national conference},
+  pages={517--524},
+  year={1968},
+  organization={ACM}
+}
+
+@inproceedings{Boesch:2011:Online,
+author = {Boesch, Florian},
+title = {WebGL GPU Landscaping and Erosion},
+booktitle = {http://codeflow.org/entries/2011/nov/10/webgl-gpu-landscaping-and-erosion/},
+month = nov,
+year = {2011},
+url = {http://codeflow.org/entries/2011/nov/10/webgl-gpu-landscaping-and-erosion/}
+}
